<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/damageContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameContainer"
        app:layout_constraintTop_toTopOf="@+id/frameContainer">

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttomLayout"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@color/buttomBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/openSkill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/buttonButtom"
            android:onClick="openSkillSet"
            android:text="@string/skillpoint"
            android:textColor="@color/buttonTextButtom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/openWeapons"
            app:layout_constraintStart_toEndOf="@+id/openShop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/openShop"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/buttonButtom"
            android:onClick="openShop"
            android:text="@string/shop"
            android:textColor="@color/buttonTextButtom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shop" />

        <Button
            android:id="@+id/openWeapons"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/buttonButtom"
            android:onClick="openPlayerWeapons"
            android:text="@string/weapons"
            android:textColor="@color/buttonTextButtom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@color/topBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/expBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/buks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="TextView"
            android:textColor="@color/buttonTextButtom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/buttonTextButtom"
            app:layout_constraintBottom_toTopOf="@+id/expBar"
            app:layout_constraintEnd_toStartOf="@+id/currentLevel"
            tools:text="@string/level" />

        <TextView
            android:id="@+id/currentLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="TextView"
            android:textColor="@color/buttonTextButtom"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/expBar"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="13" />
    </android.support.constraint.ConstraintLayout>

    <a.asd.shooterclicker.framework.HorizontalProgressView
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"


        android:layout_width="287dp"
        android:layout_height="28dp"
        android:layout_marginTop="35dp"

        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:rcBackgroundPadding="5dp"
        app:rcProgressColor="@color/enemyLifeBar"
        app:rcRadius="5dp">

    </a.asd.shooterclicker.framework.HorizontalProgressView>

    <ImageButton
        android:id="@+id/damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:onClick="damageEnemy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@android:drawable/btn_star" />

    <FrameLayout
        android:id="@+id/weaponContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttomLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>